CSS main (Home) minor fixes (added font-family, paddings, etc.) jbernach/transandalus

--- a/src/main/webapp/assets/styles/scss/theme_oliva.scss
+++ b/src/main/webapp/assets/styles/scss/theme_oliva.scss
@@ -1,1 +1,13 @@
 // theme by default
+
+@import 'navbar-at-top';
+
+@import 'section-first';
+
+body {
+  padding-top: 0;
+}
+
+.main-province {
+  text-decoration: underline;
+}
